fixed bullet points alignment

--- a/css/about.css
+++ b/css/about.css
@@ -26,3 +26,6 @@ main {
   background-color: var(--color-secondary);
 }
 
+#strat-rules {
+  text-align: left;
+}
